unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__append__c.field-meta.xml
<CustomField>
    <fullName>rh2__append__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether TXT rollups will append text while overwrite is turned off.</description>
    <inlineHelpText>Controls whether TXT rollups will append text while overwrite is turned off.</inlineHelpText>
    <label>Append to target field</label>
    <type>Checkbox</type>
</CustomField>