unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__appendTrailingWhitespace__c.field-meta.xml
<CustomField>
    <fullName>rh2__appendTrailingWhitespace__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether TXT rollups will append a space at the end of each delimiter.</description>
    <inlineHelpText>Controls whether TXT rollups will append a space at the end of each delimiter.</inlineHelpText>
    <label>Append Trailing Whitespace</label>
    <type>Checkbox</type>
</CustomField>