unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__childExistsCheckboxRollup__c.field-meta.xml
<CustomField>
    <fullName>rh2__childExistsCheckboxRollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Rollup Helper will use the source field isDeleted to determine if a source record exists. 
        If a source record exists on the target record, then the target field checkbox will be set to true. 
        The target field will be set to false if no source records exist for the target record.</description>
    <inlineHelpText>Checks the target checkbox if a source record exists</inlineHelpText>
    <label>Child Exists Checkbox Rollup</label>
    <type>Checkbox</type>
</CustomField>