unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__conditional__c.field-meta.xml
<CustomField>
    <fullName>rh2__conditional__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether the rollup is active.</description>
    <inlineHelpText>Controls whether the rollup is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>