unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__createdDate__c.field-meta.xml
<CustomField>
    <fullName>rh2__createdDate__c</fullName>
    <description>String of the date and time the rollup was created.</description>
    <inlineHelpText>String of the date and time the rollup was created.</inlineHelpText>
    <label>Rollup Created Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>