unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Dedup_Flag__c.field-meta.xml
<CustomField>
    <fullName>rh2__Dedup_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether Rollup Helper will deduplicate multipicklist values when rolling them up</description>
    <inlineHelpText>Controls whether Rollup Helper will deduplicate multipicklist values when rolling them up</inlineHelpText>
    <label>Dedup Flag</label>
    <type>Checkbox</type>
</CustomField>