unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__delim__c.field-meta.xml
<CustomField>
    <fullName>rh2__delim__c</fullName>
    <description>Stores custom delimiter for concatenated rollups</description>
    <inlineHelpText>Stores custom delimiter for concatenated rollups</inlineHelpText>
    <label>Delimiter</label>
    <length>4</length>
    <type>Text</type>
</CustomField>