unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__description__c.field-meta.xml
<CustomField>
    <fullName>rh2__description__c</fullName>
    <defaultValue>""</defaultValue>
    <description>The description of the Rollup.</description>
    <inlineHelpText>The description of the Rollup.</inlineHelpText>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>