unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Disable_Realtime__c.field-meta.xml
<CustomField>
    <fullName>rh2__Disable_Realtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the Rollup can be triggered in real-time.</description>
    <inlineHelpText>Controls whether the Rollup can be triggered in real-time.</inlineHelpText>
    <label>Disable Realtime Flag</label>
    <type>Checkbox</type>
</CustomField>