unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__disableDefaultMaxMinSort__c.field-meta.xml
<CustomField>
    <fullName>rh2__disableDefaultMaxMinSort__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, sort orders from child filters or a custom sort field can be used instead of the default max/min sort. If unchecked, max/min rollup will be sorted by the source field.</description>
    <inlineHelpText>If checked, sort orders from child filters or a custom sort field can be used instead of the default max/min sort. If unchecked, max/min rollup will be sorted by the source field.</inlineHelpText>
    <label>Disable Default Max/Min Sort</label>
    <type>Checkbox</type>
</CustomField>