unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__escapeSpecialCharacters__c.field-meta.xml
<CustomField>
    <fullName>rh2__escapeSpecialCharacters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, will escape special reserved characters in SOQL</description>
    <inlineHelpText>When checked, will escape special reserved characters in SOQL</inlineHelpText>
    <label>Escape Special Characters</label>
    <type>Checkbox</type>
</CustomField>