unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__exceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>rh2__exceptionMessage__c</fullName>
    <description>Contains any exceptions caused by this rollup</description>
    <inlineHelpText>Contains any exceptions caused by this rollup</inlineHelpText>
    <label>Exception Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>