unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__intermediaryRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>rh2__intermediaryRelationshipField__c</fullName>
    <description>The Lookup Relationship field on the intermediary object which points to the target object. For example: Opportunity.AccountId</description>
    <inlineHelpText>The Lookup Relationship field on the intermediary object which points to the target object. For example: Opportunity.AccountId</inlineHelpText>
    <label>Intermediary Relationship Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>