unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__intermediaryRelationshipFieldName__c.field-meta.xml
<CustomField>
    <fullName>rh2__intermediaryRelationshipFieldName__c</fullName>
    <description>API Name of the Rollup's intermediary relationship field</description>
    <inlineHelpText>API Name of the Rollup's intermediary relationship field</inlineHelpText>
    <label>Intermediary Relationship Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>