unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Last_Run_Duration__c.field-meta.xml
<CustomField>
    <fullName>rh2__Last_Run_Duration__c</fullName>
    <description>Last Manual Rollup Run Duration</description>
    <inlineHelpText>Last Manual Rollup Run Duration</inlineHelpText>
    <label>Last Manual Rollup Run Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>