unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Last_Run_User__c.field-meta.xml
<CustomField>
    <fullName>rh2__Last_Run_User__c</fullName>
    <description>Last Manual Rollup Run User</description>
    <inlineHelpText>Last Manual Rollup Run User</inlineHelpText>
    <label>Last Manual Rollup Run User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>