unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__lastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>rh2__lastModifiedBy__c</fullName>
    <description>The user that last modified the rollup.</description>
    <inlineHelpText>The user that last modified the rollup.</inlineHelpText>
    <label>Rollup Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>