unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__logic__c.field-meta.xml
<CustomField>
    <fullName>rh2__logic__c</fullName>
    <description>The type of Rollup (MAX, MIN, SUM, etc.)</description>
    <inlineHelpText>The type of Rollup (MAX, MIN, SUM, etc.)</inlineHelpText>
    <label>Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>