unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__modeTiebreaker__c.field-meta.xml
<CustomField>
    <fullName>rh2__modeTiebreaker__c</fullName>
    <label>Mode Tiebreaker</label>
    <length>4</length>
    <type>Text</type>
</CustomField>