unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Number_Of_Past_Records__c.field-meta.xml
<CustomField>
    <fullName>rh2__Number_Of_Past_Records__c</fullName>
    <label>Number of Records For Last Manual Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>