unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__parentCondition__c.field-meta.xml
<CustomField>
    <fullName>rh2__parentCondition__c</fullName>
    <label>Parent Condition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>