unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__queryArchive__c.field-meta.xml
<CustomField>
    <fullName>rh2__queryArchive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether Rollup Helper queries for deleted records.</description>
    <inlineHelpText>Controls whether Rollup Helper queries for deleted records.</inlineHelpText>
    <label>Query Archive</label>
    <type>Checkbox</type>
</CustomField>