unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__relationshipField__c.field-meta.xml
<CustomField>
    <fullName>rh2__relationshipField__c</fullName>
    <description>The Lookup Relationship field on the source object which points to the target object. For example: Opportunity.AccountId</description>
    <inlineHelpText>The Lookup Relationship field on the source object which points to the target object. For example: Opportunity.AccountId</inlineHelpText>
    <label>Relationship Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>