unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Remove_Trailing_Delimeters__c.field-meta.xml
<CustomField>
    <fullName>rh2__Remove_Trailing_Delimeters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether Rollup Helper will trim any delimiters that would be placed at the end of the rolled-up text value.</description>
    <inlineHelpText>Controls whether Rollup Helper will trim any delimiters that would be placed at the end of the rolled-up text value.</inlineHelpText>
    <label>Remove Trailing Delimeters</label>
    <type>Checkbox</type>
</CustomField>