unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__rollup__c.field-meta.xml
<CustomField>
    <fullName>rh2__rollup__c</fullName>
    <defaultValue>""</defaultValue>
    <description>The date sync for this audit record.</description>
    <inlineHelpText>The date sync for this audit record.</inlineHelpText>
    <label>Rollup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>