unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__SourceFieldObject__c.field-meta.xml
<CustomField>
    <fullName>rh2__SourceFieldObject__c</fullName>
    <description>The sObject of the Lookup Field</description>
    <inlineHelpText>The sObject of the Lookup Field</inlineHelpText>
    <label>Source Field Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>