unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__targetField__c.field-meta.xml
<CustomField>
    <fullName>rh2__targetField__c</fullName>
    <description>The object/field combination in which rollup results are populated. For example: Account.Site</description>
    <inlineHelpText>The object/field combination in which rollup results are populated. For example: Account.Site</inlineHelpText>
    <label>Target Field</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>