unpackaged/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__useCommaAndDelim__c.field-meta.xml
<CustomField>
    <fullName>rh2__useCommaAndDelim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, comma-separated rollup results will be formatted in the form "one, two, and three." If unchecked, rollup results will be formatted as "one, two, three."</description>
    <inlineHelpText>If checked, comma-separated rollup results will be formatted in the form "one, two, and three." If unchecked, rollup results will be formatted as "one, two, three."</inlineHelpText>
    <label>Use Comma-And Delimiter</label>
    <type>Checkbox</type>
</CustomField>